Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,19 +4,19 @@
     </head>
     <body>
         <div>
-            <h1><a href="/">Аниме пати</a></h1>
+            <h1><a href="/">таня привеет</a></h1>
         </div>
 
         <div>
             <p>опубликовано: 07.09.2020, 12:14</p>
             <h2><a href="">My first post</a></h2>
-            <p>Aниме пати!</p>
+            <p>здарова таня</p>
         </div>
 
         <div>
             <p>опубликовано: 07.09.2020, 12:14</p>
             <h2><a href="">My second post</a></h2>
-            <p>Мы будем веселиться, танцевать под анимешные осты</p>
+            <p>нормальный сайт такой да?</p>
         </div>
     </body>
 </html>
