Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,20 +3,16 @@
         <title>Таня привет</title>
     </head>
     <body>
-        <div>
-            <h1><a href="/">таня привеет</a></h1>
-        </div>
+      <div>
+  <h1><a href="/">Django Girls Blog</a></h1>
+</div>
 
-        <div>
-            <p>опубликовано: 07.09.2020, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>здарова таня</p>
-        </div>
-
-        <div>
-            <p>опубликовано: 07.09.2020, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>нормальный сайт такой да?</p>
-        </div>
+{% for post in posts %}
+  <div>
+      <p>published: {{ post.published_date }}</p>
+      <h1><a href="">{{ post.title }}</a></h1>
+      <p>{{ post.text|linebreaksbr }}</p>
+  </div>
+{% endfor %}
     </body>
 </html>
